# jellyfin_pr_migration

./: .aiexclude  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: build_and_test.yml  docker-publish.yml  release.yml
src/: main.rs
testing/: README.md  compose.yaml  generate.sh
