[package]
name = "jellyfin_pr_migration"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"                                             # For TSV, as it's a subset of CSV
config = "0.13"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"                                          # For error handling
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] } # For SQLite output
indicatif = "0.17"                                      # For progress bars
